# classifier

./: README.md  pyproject.toml
artifacts/benchmarks/: paper_positioning.md  paper_results.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
datasets/expert_bn/alarm/: edges.csv  frame.csv  metadata.json
datasets/expert_bn/child/: edges.csv  frame.csv  metadata.json
datasets/expert_bn/insurance/: edges.csv  frame.csv  metadata.json
docs/: current_evidence_position.md
neural_bn/: __init__.py  __main__.py  baselines.py  cli.py  config.py  data.py  datasets.py  experiments.py  expert_bn.py  metrics.py  models.py  pipeline.py  results.py  runtime.py  screener.py  search.py  synthetic.py
tests/: test_baselines.py  test_datasets.py  test_experiments.py  test_metrics.py  test_pipeline.py  test_runtime.py  test_search.py
