[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-bn-classifier"
version = "0.1.0"
description = "Neural-screened explicit Bayesian network classifiers for tabular research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "networkx>=3.0",
  "scipy>=1.10",
  "torch>=2.0",
]

[project.scripts]
neural-bn = "neural_bn.cli:main"

[tool.setuptools]
packages = ["neural_bn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
